--- a/search_space/svm.yml
+++ b/search_space/svm.yml
@@ -2,3 +2,4 @@ model_type: 'svm'
 search_space:
     degree: !!python/tuple [3, 10, 8, 'i']
     kernel: ['linear', 'poly', 'rbf', 'sigmoid']
+    C: !!python/tuple [0.01, 5, 10, 'f']
